--- a/index.html
+++ b/index.html
@@ -2,11 +2,66 @@
 
 <html>
   <head>
+    <link rel="stylesheet" href="font-awesome-4.6.3/css/font-awesome.min.css">
     <title>slack</title>
   </head>
 
 
   <body>
-    A webpage, one that has been updated
+    <button type="button">CS 52</button>
+    <nav>
+      <ul>
+        <li><a href="#">Product</a></li>
+        <li><a href="#">Pricing</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Sign in</a></li>
+      </ul>
+    </nav>
+    <h1>From markup to startup in 9 weeks!</h1>
+    <p>
+      CS52, the newfangled webdev class where you may just learn something
+    </p>
+    <input type="button" name="Create" value="Email Address">
+    <p>
+      Already a cool kid? Let's make a web page!
+    </p>
+    <ul>
+      <li>Link Heading</li>
+      <li>link 1</li>
+      <li>link 2</li>
+      <li>link 3</li>
+      <li>link 4</li>
+      <li>link 5</li>
+    </ul>
+    <ul>
+      <li>Link Heading</li>
+      <li>link 1</li>
+      <li>link 2</li>
+      <li>link 3</li>
+      <li>link 4</li>
+      <li>link 5</li>
+    </ul>
+    <ul>
+      <li>Link Heading</li>
+      <li>link 1</li>
+      <li>link 2</li>
+      <li>link 3</li>
+      <li>link 4</li>
+      <li>link 5</li>
+    </ul>
+    <ul>
+      <li>Link Heading</li>
+      <li>link 1</li>
+      <li>link 2</li>
+      <li>link 3</li>
+      <li>link 4</li>
+      <li>link 5</li>
+    </ul>
+    <button type="button">icon</button>
+    <footer>
+      <li>Contact Us</li>
+      <li>Twitter</li>
+      <li>Facebook</li>
+    </footer>
   </body>
 </html>
