basic formatted layout

--- a/index.html
+++ b/index.html
@@ -3,25 +3,28 @@
 <html>
   <head>
     <link rel="stylesheet" href="font-awesome-4.6.3/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
     <title>slack</title>
   </head>
 
 
   <body>
-    <button type="button">CS 52</button>
+    <a href="#">CS 52</a>
     <nav>
       <ul>
-        <li><a href="#">Product</a></li>
-        <li><a href="#">Pricing</a></li>
-        <li><a href="#">Support</a></li>
-        <li><a href="#">Sign in</a></li>
+        <li>Product</li>
+        <li>Pricing</li>
+        <li>Support</li>
+        <li>Sign in</li>
       </ul>
     </nav>
     <h1>From markup to startup in 9 weeks!</h1>
     <p>
       CS52, the newfangled webdev class where you may just learn something
     </p>
-    <input type="button" name="Create" value="Email Address">
+    <input type="text" name="Create" value="Email Address">
+    <button type="Submit" name="Submit">Create</button>
     <p>
       Already a cool kid? Let's make a web page!
     </p>
@@ -57,11 +60,13 @@
       <li>link 4</li>
       <li>link 5</li>
     </ul>
-    <button type="button">icon</button>
+    <a href="#" class="no_underline">>_</a>
     <footer>
-      <li>Contact Us</li>
-      <li>Twitter</li>
-      <li>Facebook</li>
+      <ul>
+        <li>Contact Us</li>
+        <li><i class="fa fa-twitter" aria-hidden="true"></i></li>
+        <li><i class="fa fa-facebook-official" aria-hidden="true"></i></li>
+      </ul>
     </footer>
   </body>
 </html>
