--- a/index.html
+++ b/index.html
@@ -10,63 +10,71 @@
 
 
   <body>
-    <a href="#">CS 52</a>
-    <nav>
-      <ul>
-        <li>Product</li>
-        <li>Pricing</li>
-        <li>Support</li>
-        <li>Sign in</li>
-      </ul>
-    </nav>
-    <h1>From markup to startup in 9 weeks!</h1>
-    <p>
-      CS52, the newfangled webdev class where you may just learn something
-    </p>
-    <input type="text" name="Create" value="Email Address">
-    <button type="Submit" name="Submit">Create</button>
-    <p>
-      Already a cool kid? Let's make a web page!
-    </p>
-    <ul>
-      <li>Link Heading</li>
-      <li>link 1</li>
-      <li>link 2</li>
-      <li>link 3</li>
-      <li>link 4</li>
-      <li>link 5</li>
-    </ul>
-    <ul>
-      <li>Link Heading</li>
-      <li>link 1</li>
-      <li>link 2</li>
-      <li>link 3</li>
-      <li>link 4</li>
-      <li>link 5</li>
-    </ul>
-    <ul>
-      <li>Link Heading</li>
-      <li>link 1</li>
-      <li>link 2</li>
-      <li>link 3</li>
-      <li>link 4</li>
-      <li>link 5</li>
-    </ul>
-    <ul>
-      <li>Link Heading</li>
-      <li>link 1</li>
-      <li>link 2</li>
-      <li>link 3</li>
-      <li>link 4</li>
-      <li>link 5</li>
-    </ul>
-    <a href="#" class="no_underline">>_</a>
-    <footer>
-      <ul>
-        <li>Contact Us</li>
-        <li><i class="fa fa-twitter" aria-hidden="true"></i></li>
-        <li><i class="fa fa-facebook-official" aria-hidden="true"></i></li>
-      </ul>
-    </footer>
+    <div class="cover">
+      <nav>
+        <ul class="nav_list">
+          <li><a href="#" class="no_underline">>_CS 52</a></li>
+          <li>Product</li>
+          <li>Pricing</li>
+          <li>Support</li>
+          <li>Sign in</li>
+        </ul>
+      </nav>
+      <div class="central_info">
+        <h1 class="ci_child">From markup to startup in 9 weeks!</h1>
+        <p class="ci_child">
+          CS52, the newfangled webdev class where you may just learn something
+        </p>
+        <div class="email_submit ci_child">
+          <input type="text" name="Create" value="Email Address">
+          <button type="Submit" name="Submit">Create</button>
+        </div>
+        <p>
+          Already a cool kid? Let's make a web page!
+        </p>
+      </div>
+      <div class="secondary_info">
+        <ul class="si_child">
+          <li>Link Heading</li>
+          <li>link 1</li>
+          <li>link 2</li>
+          <li>link 3</li>
+          <li>link 4</li>
+          <li>link 5</li>
+        </ul>
+        <ul class="si_child">
+          <li>Link Heading</li>
+          <li>link 1</li>
+          <li>link 2</li>
+          <li>link 3</li>
+          <li>link 4</li>
+          <li>link 5</li>
+        </ul>
+        <ul class="si_child">
+          <li>Link Heading</li>
+          <li>link 1</li>
+          <li>link 2</li>
+          <li>link 3</li>
+          <li>link 4</li>
+          <li>link 5</li>
+        </ul>
+        <ul class="si_child">
+          <li>Link Heading</li>
+          <li>link 1</li>
+          <li>link 2</li>
+          <li>link 3</li>
+          <li>link 4</li>
+          <li>link 5</li>
+        </ul>
+      </div>
+      <footer>
+        <ul class="footer_list">
+          <li><a href="#" class="no_underline">>_</a></li>
+          <li>Contact</li>
+          <li><i class="fa fa-twitter" aria-hidden="true"></i></li>
+          <li><i class="fa fa-facebook-official" aria-hidden="true"></i></li>
+        </ul>
+      </footer>
+    </div>
   </body>
 </html>
