--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="font-awesome-4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
     <title>slack</title>
   </head>
 
@@ -13,29 +14,29 @@
     <div class="cover">
       <nav>
         <ul class="nav_list">
-          <li><a href="#" class="no_underline">>_CS 52</a></li>
-          <li>Product</li>
-          <li>Pricing</li>
-          <li>Support</li>
-          <li>Sign in</li>
+          <li class="no_underline"><a href="#" class="no_underline" id="logo">>__CS 52</a></li>
+          <li class="deprecate">Product</li>
+          <li class="deprecate">Pricing</li>
+          <li class="deprecate">Support</li>
+          <li id="double_border">Sign in</li>
         </ul>
       </nav>
       <div class="central_info">
-        <h1 class="ci_child">From markup to startup in 9 weeks!</h1>
-        <p class="ci_child">
-          CS52, the newfangled webdev class where you may just learn something
+        <h1 class="ci_child" id="headline_txt">From <em>markup</em> to <em>startup</em> in 9 weeks!</h1>
+        <p class="ci_child" id="subhead_txt">
+          CS52, the new fangled webdev class where you'll probably learn something.
         </p>
         <div class="email_submit ci_child">
-          <input type="text" name="Create" value="Email Address">
-          <button type="Submit" name="Submit">Create</button>
+          <div class="button_input">
+            <input type="text" name="Create" value="Email Address">
+            <button type="Submit" name="Submit">Create</button>
+          </div>
+          <p>already a cool kid? lets make a web page!</p>
         </div>
-        <p>
-          Already a cool kid? Let's make a web page!
-        </p>
       </div>
       <div class="secondary_info">
         <ul class="si_child">
-          <li>Link Heading</li>
+          <li class="link_heading">Link Heading</li>
           <li>link 1</li>
           <li>link 2</li>
           <li>link 3</li>
@@ -43,7 +44,7 @@
           <li>link 5</li>
         </ul>
         <ul class="si_child">
-          <li>Link Heading</li>
+          <li class="link_heading">Link Heading</li>
           <li>link 1</li>
           <li>link 2</li>
           <li>link 3</li>
@@ -51,7 +52,7 @@
           <li>link 5</li>
         </ul>
         <ul class="si_child">
-          <li>Link Heading</li>
+          <li class="link_heading">Link Heading</li>
           <li>link 1</li>
           <li>link 2</li>
           <li>link 3</li>
@@ -59,7 +60,7 @@
           <li>link 5</li>
         </ul>
         <ul class="si_child">
-          <li>Link Heading</li>
+          <li class="link_heading">Link Heading</li>
           <li>link 1</li>
           <li>link 2</li>
           <li>link 3</li>
@@ -69,7 +70,7 @@
       </div>
       <footer>
         <ul class="footer_list">
-          <li><a href="#" class="no_underline">>_</a></li>
+          <li class="no_underline"><a href="#" class="no_underline">>_</a></li>
           <li>Contact</li>
           <li><i class="fa fa-twitter" aria-hidden="true"></i></li>
           <li><i class="fa fa-facebook-official" aria-hidden="true"></i></li>
