--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <li class="deprecate">Pricing</li>
           <li class="deprecate">Support</li>
           <input type="checkbox" id="toggle">
-          <li id="double_border"><label for="toggle">Sign in</label></li>
+          <li id="double_border"><label for="toggle"><span class="deprecate">Sign in</span><span class="dep_opposite">Menu</span></label></li>
           <div class="menu_screen">
             <ul id="ms_top">
               <li id="ms_logo">>__CS 52</li>
